# introduction_parallel_course

./: CMakeLists.txt  README.md
results/session1/Callgrind/: small_serial_base_callgrind.out  small_serial_base_debug_O2_callgrind.out  small_serial_base_debug_callgrind.out
src/: cuda.cu  instrinsics1.cpp  openmp1.cpp  serial_base.cpp  serial_base1.cpp  serial_base2.cpp
training/: Session1  Session1.md
